== Change log ==

=== v1.23d ===
* Fixed errors when using furnace and there are no custom-time smelting recipes
* Fixed "rmreload" not removing removed furnace recipes
* Added API method isCustomRecipe(recipe) that also checks if recipe is a furnace recipe (which isCustomRecipe(result) did NOT)
* Fixed API method removeCustomRecipes() not removing custom furnace recipes

\\

=== v1.23c ===
++Changed files: config.yml++
* Fixed furnace Shift+Click behaviour:
** Items can be stacked over other items in the slots if they're alike
** You can now organize your inventory with Shift+Click again because plugin will no longer cancel it regardless of furnace's slot emptyness
** Optimized a bit so it doesn't trigger when not clicking an item
* Fixed rmreload restarting furnaces that run custom-time recipes
* Added option to enable/disable certain events for compatibility, see config.yml.
** They can also be changed while server is running by using rmreload
* Made some changes to code, should improve performance a bit

\\

=== v1.23b ===
++Changed files: config.yml++
* Fixed Shift+Clicking workbench result not updating the inventory (the temporary fix)
* Fixed RecipeManagerCraftEvent not triggering when recipe can be crafted and triggering when it couldn't
* Added "metrics" config option to change whenver this specific plugin uses metrics (doesn't create the PluginMetrics folder and stuff)

\\

=== v1.23 ===
NOTE: Previous version should've been v1.23 because it contains alot of new features and fixes, but I forgot to change that and I'll make this one instead.
* Fixed errors when running plugin without having Vault (which is optional)
* Fixed plugin removing other plugins' recipes, made the method more accurate and it's available in the API under .getRecipes().removeDefaultRecipes()
* Added "furnace-shift-click" option in config.yml, controls shift+click behaviour inside furnace UI, read more about it in the config.yml file