@@ -5,6 +5,8 @@
 * Fixed "rmreload" not removing removed furnace recipes
 * Added API method isCustomRecipe(recipe) that also checks if recipe is a furnace recipe (which isCustomRecipe(result) did NOT)
 * Fixed API method removeCustomRecipes() not removing custom furnace recipes
+* Fixed some java heap errors by updating the 3rd party ExperienceManager class
+* Added printing of how many recipes were loaded in total to remove confusion about the unblockable "182 recipes" message triggered by the server
 
 \\
 
